<resources>
    <string name="app_id" translatable="false">909633732437583</string>
    <string name="ak_login_protocol_scheme" translatable="false">ak909633732437583</string>
    <string name="client_token" translatable="false">cc4e9efad50239ee436c6ad9d7ddf416</string>
    <string name="app_name">iWomen</string>
    <string name="app_name_mm">စြမ္းရည္ၿမင္ ့မား ေမ့အင္အား</string>
    <string name="parse_app_id">WyU802fB70eNhyF9uSoj1SgKVKGLYYAZ0kX96xhr</string>
    <string name="parse_client_key">qnaqxGzfOLEgFAWXUTUJpTkgbOgn3CVxTqtTD6pn</string>
    <string name="hello_world">Hello world!</string>
    <string name="betogether_title_eng">Be Together</string>
    <string name="betogether_title_mm">ေပါင္းစည္းေဆာင္ရြက္ရန္</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_mm">ၿပင္ဆင္မည္</string>
    <string name="title_action_settings_eng">Language Settings</string>
    <string name="title_action_settings_mm">ဘာသာ စကားေၿပာင္းရန္</string>
    <string name="title_notrification_eng">Receive Notifications</string>
    <string name="title_notrification_mm">အသိေပးအေၾကာင္းၾကားစာလက္ခံရန္</string>
    <string name="title_change_theme_eng">Change Theme</string>
    <string name="title_change_theme_mm">အေရာင္ေၿပာင္းလဲရန္</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
    <string name="title_activity_about_us_eng">About Us</string>
    <string name="title_activity_about_us_mm">ကြ်ႏုုပ္တိုု ့အေၾကာင္း</string>
    <string name="title_activity_post_news">News</string>
    <string name="open_internet_warning_eng">You can read offline.</string>
    <string name="open_internet_warning">You can read offline.</string>
    <string name="open_internet_warning_mm">အင္တာနက္ မသံုးဘဲ ပထမအၾကိမ္ဖြင့္ ထားသည္မ်ားကိုုဖတ္ရွုု ၍ ရႏိုင္ပါသည္။
</string>
    <string name="loading_mm">ခဏေစာင့္ပါ ….</string>
    <string name="loading_eng">Loading...</string>
    <string name="about_us_mm">ကြ်ႏုုပ္တိုု ့အေၾကာင္း</string>
    <string name="about_us_eng">About</string>
    <string name="leadership_mm">ေခါင္းေဆာင္မႈသင္ခန္းစာမ်ား</string>
    <string name="leadership_eng">Leadership Lessons</string>
    <string name="title_activity_new_post_eng">New Post</string>
    <string name="title_activity_new_post_mm">ပိုု ့စ္အသစ္တင္မည္</string>
    <string name="title_activity_beinspired_new_post_eng">New Be Inspired Post</string>
    <string name="title_activity_beinspired_new_post_mm">New Post</string>
    <string name="new_post_mm">ပိုု ့စ္အသစ္တင္မည္</string>
    <string name="new_post_eng">Post New Story</string>
    <string name="character_count_placeholder">0/400</string>
    <string name="new_post_hint_title_mm">ယခုု ေနရာတြင္ အၿခားTLGs အဖြဲ ့၀င္မ်ားသိုု ့ေမးခြန္းမ်ားေမးၿခင္း၊ အၾကံညဏ္မ်ားေတာင္းၿခင္း ႏွင့္ မိမိတိုု ့အဖြဲ ့အသက္ေမြး၀မ္းေၾကာင္းဆိုုင္ရာကြ်မ္းက်င္မွုုတိုု ့ကိုုမွွ်ေ၀ေဖာ္ၿပႏိုုင္ပါသည္။
ေအာင္ၿမင္ေသာ လုုပ္ငန္းေဆာင္တာမ်ား အဖြဲ ့လွုုပ္ရွားေဆာင္ရြက္ ခ်က္မ်ား ကိုုလည္းတင္ၿပႏိုုင္ပါသည္။
</string>
    <string name="new_post_hint_title_eng">Here you can ask a question to other TLGs, ask for advice to other TLGs and share your livelihood skills with other TLGs.And of course you can aslo post your successful TLG activities.</string>
    <string name="new_iwomen_post_hint_title_eng">Here you can post a personal story of your life to inspire other women and men in the iWomen community. iWomen Team will select and publish the best stories. </string>
    <string name="new_iwomen_post_hint_title_mm">ယခုု ေနရာတြင္ မိမိဘ၀တစ္ေလ်ာက္လံုုးအမွတ္ရေနသည္ ့လြမ္းမိုုးသည္ ့စိတ္ဓာတ္ခြန္အားေပးသည့္
အေၾကာင္းအရာကိုုေရးသားတင္ပိုု ့ေပးႏိုုင္ပါသည္။ iWomen အဖြဲ႔မွေနၿပီး အေကာင္းဆံုးစာသားမ်ားကို ေရြးခ်ယ္ၿပီိးေဖာ္ၿပေပးသြားပါမည္</string>
    <string name="post_body_hint_eng">Before posting to the iWomen Community, check in which category you are. Here only post questions and messages related to</string>
    <string name="post_body_hint_end_closing">. Thanks for posting!</string>
    <string name="post_body_hint_mm">iWomen မွာပို႔စ္အသစ္မတင္ခင္ သင္ဘယ္ေခါင္းစဥ္တြင္ေရာက္ေနလဲဆိုတာအရင္ေလ့လာပါ။ ယခုေရာက္ေနေသာေနရာတြင္သက္ဆိုင္ေသာပို႔စ္မွာ</string>
    <string name="post_body_hint_end_closing_mm">ပို႔စ္အသစ္တင္ၿခင္းအတြက္ေက်းဇူးတင္ပါသည္။</string>
    <string name="new_post_hint_body_mm">ပိုု ့စ္အသစ္</string>
    <string name="new_post_hint_body_eng">Story</string>
    <string name="new_post_take_photo_mm">ဓာတ္ပံုုရိုုက္မည္</string>
    <string name="new_post_take_photo_eng">Take Photo</string>
    <string name="new_post_upload_photo_mm">ဓာတ္ပံုုတင္မည္</string>
    <string name="new_post_upload_photo_eng">Upload Image</string>
    <string name="choose_photo_mm">ေရြး ခ်ယ္ပါ</string>
    <string name="choose_photo_eng">Choose</string>
    <string name="new_post_audio_mm">အသံဖိုုင္တင္ရန္ ႏွိပ္ေရြးပါ</string>
    <string name="new_post_audio_eng">Click Here to Upload Audio</string>
    <string name="new_post_video_mm">ဗြီဒီယိုုဖိုုင္တင္ရန္ ႏွိပ္ေရြးပါ</string>
    <string name="new_post_video_eng">Click Here to Upload Video</string>
    <string name="post_detail_comment_mm">မွတ္ ခ်က္ (သိုု ့မဟုုတ္) ေကာမန္ ့ေရးရန္</string>
    <string name="post_detail_comment_eng">Tell iWomen How You Feel</string>
    <string name="post_detail_share_post_mm">ရွဲမွ်ေ၀ပါသည္။</string>
    <string name="post_detail_share_post_eng">Share This Post</string>
    <string name="post_detail_share_post">Share This Post</string>
    <string name="post_detail_like_post_mm">ၾကိဳက္ႏွစ္သက္ပါသည္</string>
    <string name="post_detail_like_post_eng">Like This Post</string>
    <string name="com_parse_ui_username_input_hint_mm">အမည္</string>
    <string name="com_parse_ui_password_input_hint_mm">လွ်ိဳ ့၀ွက္ စာလံုုး</string>
    <string name="com_parse_ui_confirm_password_input_hint_mm">လွ်ိဳ ့၀ွက္ စာလံုုးေနာက္တစ္ၾကိမ္ၿပန္ရိုုက္ပါ</string>
    <string name="com_parse_ui_parse_login_button_label_mm">၀င္ရန္</string>
    <string name="com_parse_ui_parse_signup_button_label_mm">အေကာင့္ အသစ္ၿပဳလုုပ္ရန္</string>
    <string name="com_parse_ui_forgot_password_button_mm"><u>လွ်ိဳ ့၀ွက္ စာလံုုးေမ ့ေနပါသလား</u></string>
    <string name="com_parse_ui_ph_input_hint_mm">ဖုုန္းနံပါတ္</string>
    <string name="com_parse_ui_create_account_button_label_mm">၀င္မည္</string>
    <string name="com_parse_ui_edit_account_button_label_mm">ၿပင္ဆင္မည္</string>
    <string name="i_agree_mm">မွတ္ပံုုတင္အခ်က္ အလက္မ်ားကိုုသေဘာတူပါသည္ <a href="https://www.facebook.com/UndpMyanmar"></a></string>
    <string name="signup_tlg_member_exit_mm">TLG (သိုု့) SRG အဖြဲ ့၀င္ၿဖစ္လ်င္အမွန္ၿခစ္ လုုပ္ပါ</string>
    <string name="signup_tlg_member_exit_eng">I am a TLG or SRG member</string>
    <string name="signup_tlg_member_exit">I am a TLG or SRG member</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="ok">OK</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="error_dialog_title">Error!</string>
    <string name="native_share_error">Native sharing requires the Facebook for Android
       application.</string>
    <string name="detail_download_text_mm">MM</string>
    <string name="detail_download_text_eng">Download</string>
    <string name="detail_play_text_mm">ဗြီဒီယိုု </string>
    <string name="detail_play_text_eng">Watch Now</string>
    <string name="detail_listen_text_mm">နားေထာင္ရန္</string>
    <string name="detail_listen_text_eng">Listen Now</string>
    <string name="sister_app_gen_link_mm">www.gen.org </string>
    <string name="sister_app_gen_link_eng"> www.gen.org <a href="https://www.gen.org"></a></string>
    <string name="sister_app_undp_link_mm">www.undpmyanmar.org</string>
    <string name="sister_app_undp_link_eng">www.undpmyanmar.org <a href="https://www.facebook.com/UndpMyanmar"></a></string>
    <string name="tlg_group_name_eng">May Doe Arr Man</string>
    <string name="tlg_group_name_mm">ေမတိုု ့အားမာန္</string>
    <string name="tlg_group_name_un">မေတို့အားမာန်</string>
    <string name="tlg_group_address_eng">KyeitLet , Ayeyarwady</string>
    <string name="tlg_group_address_mm">က်ိဳက္လတ္ ၊ ဧရာ၀တီ</string>
    <string name="tlg_group_address_un">ကျိုက်လတ် ၊ ဧရာဝတီ</string>
    <string name="tlg_leader_name_eng">Hla San Htwae</string>
    <string name="tlg_leader_name_mm">လွစန္းေထြး</string>
    <string name="tlg_leader_name_un">လှစန်းထွေး</string>
    <string name="tlg_leader_role_eng">Women Leaders</string>
    <string name="tlg_leader_role_mm">အဖြဲ ့ေခါင္းေဆာင္</string>
    <string name="tlg_leader_role_un">အဖွဲ့ခေါင်းဆောင်</string>
    <string name="tlg_who_we_r_eng">Who we are</string>
    <string name="tlg_who_we_r_mm">အဖြဲ ့အေၾကာင္း</string>
    <string name="tlg_who_we_r_un">အဖွဲ့အကြောင်း</string>
    <string name="tlg_member_lbl_eng">Number of Self Reliant Groups</string>
    <string name="tlg_member_lbl_mm">ကိုယ့္အားကိုယ္ကိုးအဖြဲ႔မ်ား</string>
    <string name="tlg_member_lbl_un">ကိုယ့်အားကိုယ်ကိုးအဖွဲ့များ </string>
    <string name="tlg_member_txt_eng">15</string>
    <string name="tlg_member_txt_mm">၁၅</string>
    <string name="tlg_member_txt_un">၁၅</string>
    <string name="tlg_srg_member_lbl_eng">Women Self-Reliant Group Members</string>
    <string name="tlg_srg_member_lbl_mm">စိတ္တူ ကိုုယ္တူအဖြဲ ့</string>
    <string name="tlg_srg_member_lbl_un">စိတ်တူ ကိုယ်တူအဖွဲ</string>
    <string name="tlg_srg_member_txt_eng">688</string>
    <string name="tlg_srg_member_txt_mm">၆၈၈</string>
    <string name="tlg_srg_member_txt_un">၆၈၈</string>
    <string name="tlg_key_activity_lbl_eng">Group Activities</string>
    <string name="tlg_key_activity_lbl_mm">အဖြဲ လုုပ္ငန္းစဥ္မ်ား</string>
    <string name="tlg_key_activity_lbl_un">အဓိက လုပ်ငန်းစဉ်များ</string>
    <string name="tlg_key_activity_txt_eng">Planting Trees and Making soap </string>
    <string name="tlg_key_activity_txt_mm">အပင္ဆိုုက္ၿခင္း ၊ ဆပ္ၿပာဆီၿပဳလုုပ္ၿခင္း</string>
    <string name="tlg_key_activity_txt_un">အပင်ဆိုက်ခြင်း ၊ ဆပ်ပြာဆီပြုလုပ်ခြင်း</string>
    <string name="tlg_key_skill_lbl_eng">Skills We Want to Learn</string>
    <string name="tlg_key_skill_lbl_mm">က်မ တို ့သင္ယူခ်င္ေသာ အတတ္ပညာမ်ား</string>
    <string name="tlg_key_skill_lbl_un">အသက်မွေး ၀မ်းကြောင်းဆိုင်ရာ ကျွမ်းကျင်မှု</string>
    <string name="register_congrat_eng1">CONGRATULATIONS</string>
    <string name="register_congrat_eng2">You are Now Officially</string>
    <string name="register_congrat_eng3">an iWoman- Inspiring Woman</string>
    <string name="register_enjoy">ENJOY THE APP</string>
    <string name="register_tour">Take a Tour</string>
    <string name="register_next">Next</string>
    <string name="register_pro_greet1">Are you From Myanmar ?</string>
    <string name="register_pro_greet2">Are you a TLG/SRG member ?</string>
    <string name="register_pro_yes">Yes</string>
    <string name="register_pro_no">No</string>
    <string name="calendar_permission">You need to have admin rights to see this.</string>
    <string name="login_dialog_mm_zawgyi">ၿမန္မာေဇာ္ဂ်ီေဖာင့္ | Myanmar Zawgyi</string>
    <string name="login_dialog_mm_uni">ၿမန္မာ ယူနီကုုတ္ေဖာင့္ |Myanmar Unicode</string>
    <string name="login_dialog_eng">English | အဂၤလိပ္ေဖာင့္ </string>
    <string name="login_dialog_mm_deafult">ၿမန္မာစာ ပံုေသ | Myanmar Default</string>
    <string name="version_new_no">Your version is already up to date.</string>
    <string name="version_yes">Yes</string>
    <string name="version_no">No</string>
    <string name="version_download_title">iWomen App</string>
    <string name="report_post">Report this post to iWomen Team because it advocates violence, it is a fake news story, it is in unappropriate for iWomen Community and it should not be here</string>
    <string name="report_post_ok">Report</string>
    <string name="report_post_cancel">Cancel</string>
</resources>