<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.questmyanmar.gobus.ui.activity.TicketDetailsActivity">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:id="@+id/action_rating"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_stars_5"/>

    <item
        android:id="@+id/action_menu_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/app_name"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:visible="false"
    app:showAsAction="never"/>
</menu>