<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/fy_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
        android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
        android:paddingRight="@dimen/com_parse_ui_horizontal_margin"

        android:paddingTop="@dimen/com_parse_ui_vertical_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


            android:id="@+id/parse_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <org.undp_iwomen.iwomen.ui.widget.CustomTextView
                    android:id="@+id/register_congrat_head_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/register_congrat_eng1"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <org.undp_iwomen.iwomen.ui.widget.CustomTextView
                    android:id="@+id/register_congrat_head_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/register_congrat_eng2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <org.undp_iwomen.iwomen.ui.widget.CustomTextView
                    android:id="@+id/register_congrat_head_txt2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="@string/register_congrat_eng3"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:background="#fff">

                <com.felipecsl.gifimageview.library.GifImageView
                    android:id="@+id/register_gifImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/parse_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <org.undp_iwomen.iwomen.ui.widget.CustomButton
                    android:id="@+id/Next"
                    style="@style/ParseLoginUI.Button.SignUp"
                    android:text="@string/register_enjoy"
                    android:transitionName="@string/register_next"
                    android:textSize="15sp" />

                <!--<org.undp_iwomen.iwomen.ui.widget.CustomButton
                    android:id="@+id/Next"
                    style="@style/ParseLoginUI.Button.SignUp"
                    android:text="@string/register_next"
                    android:transitionName="@string/register_next"
                    android:textSize="15sp" />-->


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/com_parse_ui_vertical_margin">

                <org.undp_iwomen.iwomen.ui.widget.CustomButton
                    android:id="@+id/register_take_tour"

                    style="@style/ParseLoginUI.Button.ThirdPartyLogin"

                    android:visibility="visible"
                    android:text="@string/register_tour" />
            </LinearLayout>


        </LinearLayout>
    </FrameLayout>
</ScrollView>
