<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingLeft="16dp"


    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <org.undp_iwomen.iwomen.ui.widget.CustomTextView
            android:id="@+id/report_dialog_language_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/report_post"
            android:textSize="18dp"
            android:textColor="@android:color/white" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="right"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:id="@+id/dialog_ok_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/report_post_ok"
            android:textColor="@android:color/white" />

        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/report_post_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>