<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/abc_dialog_padding_material"
    android:layout_height="match_parent"
    android:background="@color/light_green_500">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <org.undp_iwomen.iwomen.ui.widget.CustomTextView
            android:id="@+id/dialog_refresh_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/abc_dialog_padding_material"
            android:textColor="@color/white"
            android:text="@string/version_download_title"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/postdetail_content_role_more_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">



        <org.undp_iwomen.iwomen.ui.widget.CustomTextView
            android:id="@+id/dialog_version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/version_new_no"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:weightSum="2"
        >
        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_yes"
            android:id="@+id/version_dialog_btn_ok"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:textAllCaps="true"
            android:layout_alignParentTop="true" />
        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_no"
            android:id="@+id/version_dialog_btn_no"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:textAllCaps="true"
            android:layout_alignParentTop="true" />
    </LinearLayout>

</LinearLayout>