<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/parse_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
    android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
    android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
    android:paddingTop="@dimen/com_parse_ui_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <org.undp_iwomen.iwomen.ui.widget.CustomTextView
            android:id="@+id/register_pro_greet1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/register_pro_greet1"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/register_pro_country_rdioGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/register_pro_country_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/register_pro_yes" />

            <RadioButton
                android:id="@+id/register_pro_country_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/register_pro_no" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <org.undp_iwomen.iwomen.ui.widget.CustomTextView
            android:id="@+id/register_pro_greet2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="left"
            android:text="@string/register_pro_greet2"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/register_pro_tlg_rdioGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/register_pro_tlg_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/register_pro_yes" />

            <RadioButton
                android:id="@+id/register_pro_tlg_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/register_pro_no" />


        </RadioGroup>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/register_pwd_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <org.undp_iwomen.iwomen.ui.widget.CustomButton
            android:id="@+id/Next"
            style="@style/ParseLoginUI.Button.SignUp"
            android:text="@string/register_next"
            android:transitionName="@string/register_next"
            android:textSize="15sp" />


    </LinearLayout>


</LinearLayout>

